# Glyphix-module

./: .gitignore  CMakeLists.txt  README.md
include/: A.h  B.h  C.h  D.h  E.h  F.h  G.h  H.h  I.h  J.h  K.h  L.h  LetterFuncs.h  M.h  N.h  O.h  P.h  Q.h  R.h  S.h  T.h  U.h  UserInput.h  V.h  W.h  X.h  Y.h  Z.h  generate.h  glyphix.h  homescreen.h
sources/: display.cpp  generator.cpp  gly-write.cpp  glyphix.cpp  homescreen.cpp  main.cpp  module.cpp  print.cpp  user-input.cpp
sources/letters/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp  P.cpp  Q.cpp  R.cpp  S.cpp  T.cpp  U.cpp  V.cpp  W.cpp  X.cpp  Y.cpp  Z.cpp
